add aws access key from env

--- a/s3fs.config
+++ b/s3fs.config
@@ -6,12 +6,12 @@
 echo "reading config..."
 
 #### your AWSACCESSKEYID
-id=""
+id=$AWSACCESSKEYID
 #####your AWSSECRETACCESSKEY
-key=""
+key=$AWSSECRETACCESSKEY
 
 #### your S3 Bucket
-mybucket=""
+mybucket=$bucket
 #### your target mountpoint
 mountpoint="./mnt"
 
