add more config options to s3fs tools

--- a/s3fs-tools/s3fs.config
+++ b/s3fs-tools/s3fs.config
@@ -11,7 +11,7 @@ key=$AWSSECRETACCESSKEY
 #### your S3 Bucket
 mybucket=$bucket
 #### your target mountpoint
-mountpoint="./mnt"
+mountpoint="../mnt"
 
 #### local caching
 cache="-ouse_cache=/tmp"
