remove double config entrys

--- a/rds-tools/rds.config
+++ b/rds-tools/rds.config
@@ -7,7 +7,7 @@ name="test"
 size="5"
 
 ## instance type (db.m1.small)
-instance-type=db.m1.small""
+#instance-type="db.m1.small"
 
 ## Database Type (MySQL)
 database-type="MySQL"
@@ -19,4 +19,10 @@ password="test"
 
 ## default region
 export EC2_REGION=us-west-1
+
+## mysql engine version
+engine="MySQL5.8"
+
+## instance class
+class="db.m1.small"
 
